round_corner.xml (22)

--- a/res/layout-land/ha_app_cnt.xml
+++ b/res/layout-land/ha_app_cnt.xml
@@ -28,13 +28,13 @@
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="80px">
+            android:layout_height="wrap_content">
 
             <TextView
                 android:text="힐링 사운드"
                 android:layout_width="270px"
                 android:layout_height="match_parent"
-                android:id="@+id/tv_title_cnt_healing"
+                android:id="@+id/tv_title_cnt_1"
                 android:layout_weight="1"
                 android:gravity="center"
                 android:background="#f2f2f2"
@@ -48,7 +48,7 @@
                 android:text="JEJU 힐링 사운드"
                 android:layout_width="270px"
                 android:layout_height="match_parent"
-                android:id="@+id/tv_title_cnt_jeju"
+                android:id="@+id/tv_title_cnt_2"
                 android:layout_weight="1"
                 android:gravity="center"
                 android:background="#f2f2f2"
@@ -62,7 +62,7 @@
                 android:text="호흡조절법"
                 android:layout_width="270px"
                 android:layout_height="match_parent"
-                android:id="@+id/tv_title_cnt_breath"
+                android:id="@+id/tv_title_cnt_3"
                 android:layout_weight="1"
                 android:gravity="center"
                 android:background="#f2f2f2"
@@ -76,7 +76,7 @@
                 android:text="명상법"
                 android:layout_width="270px"
                 android:layout_height="match_parent"
-                android:id="@+id/tv_title_cnt_meditation"
+                android:id="@+id/tv_title_cnt_4"
                 android:layout_weight="1"
                 android:gravity="center"
                 android:background="#f2f2f2"
@@ -90,7 +90,7 @@
                 android:text="다시 생각하기"
                 android:layout_width="270px"
                 android:layout_height="match_parent"
-                android:id="@+id/tv_title_cnt_rethink"
+                android:id="@+id/tv_title_cnt_5"
                 android:layout_weight="1"
                 android:gravity="center"
                 android:background="#f2f2f2"
@@ -104,7 +104,7 @@
                 android:text="Smoody"
                 android:layout_width="270px"
                 android:layout_height="match_parent"
-                android:id="@+id/tv_title_cnt_smoody"
+                android:id="@+id/tv_title_cnt_6"
                 android:layout_weight="1"
                 android:background="#f2f2f2"
                 android:gravity="center"
@@ -118,13 +118,13 @@
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="151px">
+            android:layout_height="wrap_content">
 
             <TextView
                 android:text="2회"
                 android:layout_width="250px"
                 android:layout_height="150px"
-                android:id="@+id/tv_cnt_healing"
+                android:id="@+id/tv_cnt_1"
                 android:layout_weight="1"
                 android:gravity="center"
                 android:textColor="#5c5c5c"
@@ -136,7 +136,7 @@
                 android:text="2회"
                 android:layout_width="250px"
                 android:layout_height="150px"
-                android:id="@+id/tv_cnt_jeju"
+                android:id="@+id/tv_cnt_2"
                 android:layout_weight="1"
                 android:gravity="center"
                 android:textColor="#5c5c5c"
@@ -148,7 +148,7 @@
                 android:text="2회"
                 android:layout_width="250px"
                 android:layout_height="150px"
-                android:id="@+id/tv_cnt_breath"
+                android:id="@+id/tv_cnt_3"
                 android:layout_weight="1"
                 android:gravity="center"
                 android:textColor="#5c5c5c"
@@ -160,7 +160,7 @@
                 android:text="2회"
                 android:layout_width="250px"
                 android:layout_height="150px"
-                android:id="@+id/tv_cnt_meditation"
+                android:id="@+id/tv_cnt_4"
                 android:layout_weight="1"
                 android:gravity="center"
                 android:textColor="#5c5c5c"
@@ -172,7 +172,7 @@
                 android:text="2회"
                 android:layout_width="250px"
                 android:layout_height="150px"
-                android:id="@+id/tv_cnt_smoody"
+                android:id="@+id/tv_cnt_5"
                 android:layout_weight="1"
                 android:gravity="center"
                 android:textColor="#5c5c5c"
@@ -184,7 +184,7 @@
                 android:text="2회"
                 android:layout_width="250px"
                 android:layout_height="150px"
-                android:id="@+id/tv_cnt_rethink"
+                android:id="@+id/tv_cnt_6"
                 android:layout_weight="1"
                 android:gravity="center"
                 android:textColor="#5c5c5c"
