--- a/res/layout-land/ha_app_cnt.xml
+++ b/res/layout-land/ha_app_cnt.xml
@@ -3,19 +3,19 @@
     android:orientation="vertical"
     android:layout_height="300dp"
     android:background="@drawable/round_corner"
-    android:layout_width="match_parent">
+    android:layout_width="550dp">
 
     <TextView
         android:text="앱 사용 횟수"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/textView2"
+        android:id="@+id/tv_title_cnt"
         android:textSize="65px"
         android:textColor="#5c5c5c"
-        android:gravity="center"
-        android:layout_marginTop="100px"
-        android:layout_marginBottom="100px"
-        android:textStyle="bold" />
+        android:layout_marginTop="80px"
+        android:layout_marginBottom="80px"
+        android:textStyle="bold"
+        android:layout_gravity="center_horizontal" />
 
     <LinearLayout
         android:orientation="vertical"
@@ -195,10 +195,13 @@
 
     <TextView
         android:text="닫기"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/tv_cnt_close"
         android:gravity="center"
         android:textSize="45px"
-        android:textColor="#4c5f89" />
+        android:textColor="#4c5f89"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="80px"
+        android:layout_marginBottom="80px" />
 </LinearLayout>
