--- a/res/drawable/round_corner_left.xml
+++ b/res/drawable/round_corner_left.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <solid android:color="#fff"/>
-    <corners android:radius="30px"/>
+    <corners android:topLeftRadius="30px"
+        android:bottomLeftRadius="30px"/>
     <padding android:left="0dp" android:top="0dp" android:right="0dp" android:bottom="0dp" />
 </shape>
