--- a/res/drawable/round_corner_right.xml
+++ b/res/drawable/round_corner_right.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#fff"/>
-    <corners android:radius="30px"/>
+    <solid android:color="#5c5c5c"/>
+    <corners android:topRightRadius="30px"
+        android:bottomRightRadius="30px"/>
     <padding android:left="0dp" android:top="0dp" android:right="0dp" android:bottom="0dp" />
 </shape>
