--- a/res/layout-land/ha_monitor.xml
+++ b/res/layout-land/ha_monitor.xml
@@ -131,123 +131,11 @@
             android:textSize="28px" />
     </LinearLayout>
 
-    <LinearLayout
-        android:id="@+id/layout_content"
-        android:orientation="vertical"
+    <include
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#f2f2f2">
-
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="#a0a0a0">
-
-            <TextView
-                android:text="01"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:id="@+id/tv_num"
-                android:layout_weight="1"
-                android:textColor="#5c5c5c"
-                android:gravity="center"
-                android:background="#f9f9f9"
-                android:layout_marginRight="1px"
-                android:layout_marginBottom="1px" />
-
-            <TextView
-                android:text="DKW_001"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:id="@+id/tv_id"
-                android:layout_weight="1"
-                android:textColor="#5c5c5c"
-                android:layout_marginRight="1px"
-                android:gravity="center"
-                android:layout_marginBottom="1px"
-                android:background="#f9f9f9" />
-
-            <TextView
-                android:text="박혜연"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:id="@+id/tv_name"
-                android:layout_weight="1"
-                android:textColor="#5c5c5c"
-                android:layout_marginRight="1px"
-                android:gravity="center"
-                android:background="#f9f9f9"
-                android:layout_marginBottom="1px" />
-
-            <TextView
-                android:text="38(42:58)/123"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:id="@+id/tv_anb"
-                android:layout_weight="1"
-                android:textColor="#5c5c5c"
-                android:layout_marginRight="1px"
-                android:gravity="center"
-                android:background="#f9f9f9"
-                android:layout_marginBottom="1px" />
-
-            <TextView
-                android:text="5/5"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:id="@+id/tv_stress"
-                android:layout_weight="1"
-                android:textColor="#5c5c5c"
-                android:layout_marginRight="1px"
-                android:gravity="center"
-                android:background="#f9f9f9"
-                android:layout_marginBottom="1px" />
-
-            <LinearLayout
-                android:orientation="horizontal"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:id="@+id/layout_cnt"
-                android:layout_marginRight="1px"
-                android:gravity="center"
-                android:background="#f9f9f9"
-                android:layout_marginBottom="1px">
-
-                <TextView
-                    android:text="10회"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/tv_cnt"
-                    android:layout_weight="3"
-                    android:textColor="#5c5c5c"
-                    android:gravity="center" />
-
-                <ImageView
-                    android:src="@drawable/icon_plus"
-                    android:layout_width="0dp"
-                    android:layout_height="30dp"
-                    android:id="@+id/iv_cnt"
-                    android:layout_weight="0.5" />
-
-            </LinearLayout>
-
-            <ImageView
-                android:src="@drawable/icon_message"
-                android:layout_width="40dp"
-                android:id="@+id/iv_msg"
-                android:layout_weight="1"
-                android:layout_height="match_parent"
-                android:background="#f9f9f9"
-                android:layout_marginBottom="1px" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"></LinearLayout>
-    </LinearLayout>
+        layout="@layout/ha_monitor_content"
+        android:id="@+id/monitor_content"/>
 
 </LinearLayout>
+
