--- a/res/layout/ha_message.xml
+++ b/res/layout/ha_message.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent" android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <FrameLayout
         android:layout_width="match_parent"
@@ -16,14 +17,18 @@
             android:layout_gravity="center_vertical" />
 
         <TextView
-            android:text="ID_###"
+            android:text="메시지"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/userid"
+            android:id="@+id/title"
             android:layout_gravity="center"
             android:textColor="#5c5c5c"
             android:textSize="60px" />
     </FrameLayout>
+
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
     <LinearLayout
         android:orientation="horizontal"
@@ -42,7 +47,7 @@
             android:inputType="textPersonName"
             android:ems="10"
             android:id="@+id/message"
-            android:background="#ffffff"
+            android:background="@drawable/round_corner_left"
             android:layout_width="800px"
             android:paddingLeft="30px"
             android:layout_gravity="center_vertical"
@@ -56,26 +61,28 @@
             android:layout_height="140px"
             android:id="@+id/send"
             android:layout_gravity="center_vertical"
-            android:background="#5c5c5c"
+            android:background="@drawable/round_corner_right"
             android:textColor="#ffffff"
             android:textSize="45px"
             android:gravity="center" />
+
     </LinearLayout>
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="150px"
-        android:layout_marginBottom="200px"
-        android:background="#f5f5f5"
-        android:scrollbars="none"
-        android:fadeScrollbars="false"
-        android:id="@+id/sv">
+    <!--<ScrollView-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:layout_marginTop="150px"-->
+        <!--android:layout_marginBottom="200px"-->
+        <!--android:background="#f5f5f5"-->
+        <!--android:scrollbars="none"-->
+        <!--android:fadeScrollbars="false"-->
+        <!--android:id="@+id/sv">-->
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:id="@+id/dynamic" />
-    </ScrollView>
-</FrameLayout>
+        <!--<LinearLayout-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:orientation="vertical"-->
+            <!--android:id="@+id/dynamic" />-->
+    <!--</ScrollView>-->
+
+</LinearLayout>
