--- a/res/layout/ha_message.xml
+++ b/res/layout/ha_message.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:weightSum="1">
 
     <FrameLayout
         android:layout_width="match_parent"
@@ -28,7 +29,15 @@
 
     <ListView
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_weight="1.03"
+        android:id="@+id/lv_msg"
+        android:paddingLeft="50px"
+        android:paddingRight="50px"
+        android:scrollbars="none"
+        android:dividerHeight="10dp"
+        android:divider="@null"
+        android:background="#f5f5f5" />
 
     <LinearLayout
         android:orientation="horizontal"
