--- a/res/layout/ha_message_date_sector.xml
+++ b/res/layout/ha_message_date_sector.xml
@@ -1,12 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:paddingBottom="20dp"
+    android:paddingTop="20dp">
+
+    <View
+        android:layout_width="0dp"
+        android:background="#414141"
+        android:layout_weight="1"
+        android:layout_gravity="center"
+        android:layout_height="1px" />
 
     <TextView
-        android:text="TextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:text="date"
+        android:layout_width="0dp"
         android:id="@+id/tv_msg_sector"
-        android:layout_weight="1" />
+        android:layout_weight="0.7"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:textColor="#414141" />
+
+    <View
+        android:layout_width="0dp"
+        android:background="#414141"
+        android:layout_weight="1"
+        android:layout_gravity="center"
+        android:layout_height="1px" />
+
 </LinearLayout>
