--- a/res/layout/ha_message_box_receive.xml
+++ b/res/layout/ha_message_box_receive.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <TextView
         android:text="NAME(ID)"
@@ -31,9 +31,9 @@
             android:layout_height="wrap_content"
             android:id="@+id/tv_msg_time_receive"
             android:layout_weight="1"
-            android:layout_marginTop="30px"
             android:layout_marginLeft="20px"
-            android:textColor="#5c5c5c" />
+            android:textColor="#5c5c5c"
+            android:layout_gravity="bottom" />
     </LinearLayout>
 
 </LinearLayout>
