--- a/res/layout-land/ha_app_cnt.xml
+++ b/res/layout-land/ha_app_cnt.xml
@@ -122,7 +122,7 @@
             android:layout_height="wrap_content">
 
             <TextView
-                android:text="2회"
+                android:text=""
                 android:layout_width="250px"
                 android:layout_height="150px"
                 android:id="@+id/tv_cnt_1"
@@ -134,7 +134,7 @@
                 android:layout_marginRight="1px" />
 
             <TextView
-                android:text="2회"
+                android:text=""
                 android:layout_width="250px"
                 android:layout_height="150px"
                 android:id="@+id/tv_cnt_2"
@@ -146,7 +146,7 @@
                 android:layout_marginRight="1px" />
 
             <TextView
-                android:text="2회"
+                android:text=""
                 android:layout_width="250px"
                 android:layout_height="150px"
                 android:id="@+id/tv_cnt_3"
@@ -158,7 +158,7 @@
                 android:layout_marginRight="1px" />
 
             <TextView
-                android:text="2회"
+                android:text=""
                 android:layout_width="250px"
                 android:layout_height="150px"
                 android:id="@+id/tv_cnt_4"
@@ -170,7 +170,7 @@
                 android:layout_marginRight="1px" />
 
             <TextView
-                android:text="2회"
+                android:text=""
                 android:layout_width="250px"
                 android:layout_height="150px"
                 android:id="@+id/tv_cnt_5"
@@ -182,7 +182,7 @@
                 android:layout_marginRight="1px" />
 
             <TextView
-                android:text="2회"
+                android:text=""
                 android:layout_width="250px"
                 android:layout_height="150px"
                 android:id="@+id/tv_cnt_6"
