--- a/res/layout-land/ha_monitor.xml
+++ b/res/layout-land/ha_monitor.xml
@@ -13,7 +13,7 @@
             android:src="@drawable/icon_logout"
             android:layout_width="120px"
             android:layout_height="120px"
-            android:id="@+id/imageView" />
+            android:id="@+id/iv_logout" />
 
         <TextView
             android:text="사용자 현황"
