--- a/res/layout/ha_message.xml
+++ b/res/layout/ha_message.xml
@@ -37,7 +37,8 @@
         android:scrollbars="none"
         android:dividerHeight="10dp"
         android:divider="@null"
-        android:background="#f5f5f5" />
+        android:background="#f5f5f5"
+        android:transcriptMode="alwaysScroll"/>
 
     <LinearLayout
         android:orientation="horizontal"
