message thread 스크롤 해결

--- a/res/layout/ha_message.xml
+++ b/res/layout/ha_message.xml
@@ -38,7 +38,8 @@
         android:dividerHeight="10dp"
         android:divider="@null"
         android:background="#f5f5f5"
-        android:transcriptMode="alwaysScroll"/>
+       />
+    <!--android:transcriptMode="alwaysScroll"-->
 
     <LinearLayout
         android:orientation="horizontal"
