--- a/res/layout-land/ha_monitor.xml
+++ b/res/layout-land/ha_monitor.xml
@@ -16,6 +16,14 @@
             android:id="@+id/iv_logout" />
 
         <TextView
+                android:text=""
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/company_name"
+                android:layout_gravity="center|right"
+                android:textColor="#5c5c5c"
+                android:textSize="12sp" android:layout_marginRight="15dp"/>
+        <TextView
             android:text="사용자 현황"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
