--- a/res/layout-land/ha_monitor.xml
+++ b/res/layout-land/ha_monitor.xml
@@ -1,149 +1,161 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#f2f2f2">
+              android:orientation="vertical" android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:background="#f2f2f2">
 
     <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#ffffff">
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#ffffff">
 
         <ImageView
-            android:src="@drawable/icon_logout"
-            android:layout_width="120px"
-            android:layout_height="120px"
-            android:id="@+id/iv_logout" />
+                android:src="@drawable/icon_logout"
+                android:layout_width="100px"
+                android:layout_height="60dp"
+                android:id="@+id/iv_logout"/>
 
         <TextView
-                android:text=""
+                android:text="사용자 현황"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/company_name"
-                android:layout_gravity="center|right"
+                android:id="@+id/textView"
+                android:layout_gravity="center"
                 android:textColor="#5c5c5c"
-                android:textSize="12sp" android:layout_marginRight="15dp"/>
-        <TextView
-            android:text="사용자 현황"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/textView"
-            android:layout_gravity="center"
-            android:textColor="#5c5c5c"
-            android:textSize="60px" />
+                android:textSize="25dp"/>
+        <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="60dp" android:layout_marginLeft="440dp">
+            <TextView
+                    android:text=""
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/company_name"
+                    android:layout_gravity="center|right"
+                    android:textColor="#5c5c5c"
+                    android:textSize="12sp" android:layout_marginRight="15dp"/>
+            <ImageView
+                    android:id="@+id/iv_total_msg"
+                    android:layout_width="100px"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="right|center_vertical"
+                    android:background="#fff"
+                    android:src="@drawable/icon_message" android:scaleType="center"/>
+        </LinearLayout>
     </FrameLayout>
 
     <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#a0a0a0"
-        android:id="@+id/layout_title"
-        >
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#a0a0a0"
+            android:id="@+id/layout_title"
+    >
 
         <TextView
-            android:text="순번"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/tv_title_num"
-            android:layout_marginTop="1px"
-            android:layout_marginBottom="1px"
-            android:layout_marginRight="1px"
-            android:gravity="center"
-            android:textColor="#898989"
-            android:background="#f2f2f2"
-            android:layout_weight="1"
-            android:textSize="28px" />
+                android:text="순번"
+                android:layout_width="1dp"
+                android:layout_height="30dp"
+                android:id="@+id/tv_title_num"
+                android:layout_marginTop="1px"
+                android:layout_marginBottom="1px"
+                android:layout_marginRight="1px"
+                android:gravity="center"
+                android:textColor="#898989"
+                android:background="#f2f2f2"
+                android:layout_weight="1"
+                android:textSize="14dp"/>
 
         <TextView
-            android:text="ID"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/tv_title_id"
-            android:layout_marginTop="1px"
-            android:layout_marginBottom="1px"
-            android:layout_marginRight="1px"
-            android:gravity="center"
-            android:textColor="#898989"
-            android:background="#f2f2f2"
-            android:layout_weight="1"
-            android:textSize="28px" />
+                android:text="ID"
+                android:layout_width="1dp"
+                android:layout_height="30dp"
+                android:id="@+id/tv_title_id"
+                android:layout_marginTop="1px"
+                android:layout_marginBottom="1px"
+                android:layout_marginRight="1px"
+                android:gravity="center"
+                android:textColor="#898989"
+                android:background="#f2f2f2"
+                android:layout_weight="1.5"
+                android:textSize="14dp"/>
 
         <TextView
-            android:text="이름"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/tv_title_name"
-            android:layout_marginTop="1px"
-            android:layout_marginBottom="1px"
-            android:layout_marginRight="1px"
-            android:gravity="center"
-            android:textColor="#898989"
-            android:background="#f2f2f2"
-            android:layout_weight="1"
-            android:textSize="28px" />
+                android:text="이름"
+                android:layout_width="1dp"
+                android:layout_height="30dp"
+                android:id="@+id/tv_title_name"
+                android:layout_marginTop="1px"
+                android:layout_marginBottom="1px"
+                android:layout_marginRight="1px"
+                android:gravity="center"
+                android:textColor="#898989"
+                android:background="#f2f2f2"
+                android:layout_weight="1.5"
+                android:textSize="14dp"/>
 
         <TextView
-            android:text="ANB/HRV"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/tv_title_anb"
-            android:layout_marginTop="1px"
-            android:layout_marginBottom="1px"
-            android:layout_marginRight="1px"
-            android:gravity="center"
-            android:textColor="#898989"
-            android:background="#f2f2f2"
-            android:layout_weight="1"
-            android:textSize="28px" />
+                android:text="ANB/HRV"
+                android:layout_width="1dp"
+                android:layout_height="30dp"
+                android:id="@+id/tv_title_anb"
+                android:layout_marginTop="1px"
+                android:layout_marginBottom="1px"
+                android:layout_marginRight="1px"
+                android:gravity="center"
+                android:textColor="#898989"
+                android:background="#f2f2f2"
+                android:layout_weight="2"
+                android:textSize="14dp"/>
 
         <TextView
-            android:text="수면 / 스트레스"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/tv_title_stress"
-            android:layout_marginTop="1px"
-            android:layout_marginBottom="1px"
-            android:layout_marginRight="1px"
-            android:gravity="center"
-            android:textColor="#898989"
-            android:background="#f2f2f2"
-            android:layout_weight="1"
-            android:textSize="28px" />
+                android:text="수면 / 스트레스"
+                android:layout_width="1dp"
+                android:layout_height="30dp"
+                android:id="@+id/tv_title_stress"
+                android:layout_marginTop="1px"
+                android:layout_marginBottom="1px"
+                android:layout_marginRight="1px"
+                android:gravity="center"
+                android:textColor="#898989"
+                android:background="#f2f2f2"
+                android:layout_weight="2"
+                android:textSize="14dp"/>
 
         <TextView
-            android:text="앱 사용 횟수"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/tv_title_cnt"
-            android:layout_marginTop="1px"
-            android:layout_marginBottom="1px"
-            android:layout_marginRight="1px"
-            android:gravity="center"
-            android:textColor="#898989"
-            android:background="#f2f2f2"
-            android:layout_weight="1"
-            android:textSize="28px" />
+                android:text="앱 사용 횟수"
+                android:layout_width="1dp"
+                android:layout_height="30dp"
+                android:id="@+id/tv_title_cnt"
+                android:layout_marginTop="1px"
+                android:layout_marginBottom="1px"
+                android:layout_marginRight="1px"
+                android:gravity="center"
+                android:textColor="#898989"
+                android:background="#f2f2f2"
+                android:layout_weight="1.5"
+                android:textSize="14dp"/>
 
         <TextView
-            android:text="메시지"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/tv_title_msg"
-            android:layout_marginTop="1px"
-            android:layout_marginBottom="1px"
-            android:gravity="center"
-            android:textColor="#898989"
-            android:background="#f2f2f2"
-            android:layout_weight="1"
-            android:textSize="28px" />
+                android:text="메시지"
+                android:layout_width="1dp"
+                android:layout_height="30dp"
+                android:id="@+id/tv_title_msg"
+                android:layout_marginTop="1px"
+                android:layout_marginBottom="1px"
+                android:gravity="center"
+                android:textColor="#898989"
+                android:background="#f2f2f2"
+                android:layout_weight="1"
+                android:textSize="14dp"/>
     </LinearLayout>
 
     <include
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        layout="@layout/ha_monitor_content"
-        android:id="@+id/monitor_content"/>
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            layout="@layout/ha_monitor_content"
+            android:id="@+id/monitor_content"/>
 
 </LinearLayout>
 
